2008-11-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Fix build dependencies.

2008-11-05  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Database.Components.addin.xml: Bump MD version.

2008-10-06  Michael Hutchinson <mhutchinson@novell.com> 

	* Widgets/ProjectDirectoryComboBox.cs: Track API, fix build.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Components.mdp: Updated projects.

2008-09-17  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/objects.xml: Update.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* Widgets/DataGrid/DataGrid.cs, Widgets/SelectTableWidget.cs,
	  Widgets/ColumnMappingWidget.cs, Widgets/SelectColumnWidget.cs,
	  Widgets/DatabaseConnectionContextComboBox.cs,
	  Widgets/ProjectDirectoryComboBox.cs, Widgets/SelectSchemaWidget.cs,
	  Widgets/ConnectionSettingsWidget.cs, Widgets/TableMappingWidget.cs,
	  Widgets/SqlEditorWidget.cs, gtk-gui/objects.xml: Use new model for
	  describing custom stetic widgets.

2008-08-18  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Components.mdp: Fix reference to
	  Mono.TextEditor. The incorrect add-in version number causes
	  problems in the makefile synchronization.

2008-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Database.Components.addin.xml: Bump MD version.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am, MonoDevelop.Database.Components.mdp: Fix projects.

2008-05-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Widgets/ProjectDirectoryComboBox.cs: New project model changes and
	  updates.

2008-03-10  Lluis Sanchez Gual <lluis@novell.com> 

	* Widgets/SqlEditorWidget.cs: Track changes in the MessageService
	  class.

2008-01-30  Ben Motmans <ben.motmans@gmail.com> 

	* Widgets/ProjectDirectoryComboBox.cs: added fix for non-code projects
	* Widgets/ConnectionSettingsWidget.cs: allow the test button to be disabled